--- a/src/App.css
+++ b/src/App.css
@@ -19,3 +19,18 @@
   color: white;
   text-decoration: none;
 }
+
+.cotenedor__categorias {
+  display: flex;
+  justify-content: center;
+}
+.cotenedor__categorias button {
+  margin: 10px;
+  padding: 10px;
+  border-radius: 5px;
+  background: white;
+}
+
+.cotenedor__categorias button:hover {
+  background: #e7e7e7;
+}
