--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -128,3 +128,30 @@
   font-weight: bold;
   height: 50px;
 }
+
+/*-----------------Item Detail Carrito---------------------*/
+
+.contenedor__detallesCarrito{
+  width: 100%;
+  height: 300px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin: 10% auto;
+}
+
+.contenedor__detalles-imagen-imgCarrito{
+  width: 150px;
+  height: 150px;
+}
+
+.contenedor__detalles-item-tituloCarrito{
+  font-weight: bold;
+  font-size: 18px;
+}
+
+.contenedor__detalles-item-precioCarrito{
+  margin-top: 3%;
+  margin-bottom: 5%;
+  font-size: 15px;
+}
