Commit de la entrega del Lunes

--- a/src/components/Carrito/Carrito.css
+++ b/src/components/Carrito/Carrito.css
@@ -24,3 +24,76 @@
 p {
   color: white;
 }
+
+h4 {
+  color: white;
+  font-weight: bolder;
+  font-size: 24px;
+  text-align: center;
+  margin-top: 10px;
+  margin-bottom: 80px;
+}
+
+h3 {
+  color: white;
+  text-transform: uppercase;
+  font-weight: bolder;
+  font-size: 44px;
+  text-align: center;
+  margin-top: 10px;
+  margin-bottom: 80px;
+}
+
+.carritoContenedor {
+  height: 100%;
+  text-decoration: none;
+  color: white;
+  padding: 10px 22px;
+}
+.carritoContenedor_iconoCantidad {
+  display: flex;
+  gap: 10px;
+}
+.carritoContenedor_icono {
+  font-size: 23px;
+  color: white;
+  text-decoration: none;
+}
+.carritoContenedor_cantidad {
+  background-color: white;
+  color: black;
+  border-radius: 50%;
+  padding: 2px;
+}
+
+/* CART */
+
+.cart-checkOut {
+  width: 50%;
+  max-width: 800px;
+  margin: 10% auto;
+  margin-top: 35px;
+  padding: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #064663;
+}
+
+.cart-checkOutTotal {
+  color: white;
+  font-weight: bolder;
+  font-size: 22px;
+}
+
+.cart-checkOutTotalButton {
+  padding: 5px;
+  border: solid white;
+  color: white;
+  background-color: transparent;
+}
+
+.cart-checkOutTotalButton:hover {
+  background-color: #04293a;
+}
