--- a/src/App.css
+++ b/src/App.css
@@ -231,3 +231,87 @@
   text-align: center;
   font-size: 22px;
 }
+
+/*---- CONTACTO -----*/
+.content {
+  color: white;
+  max-width: 1170px;
+  padding: 1.5rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.logo {
+  text-align: center;
+  font-size: 3em;
+}
+
+.contact-wrapper {
+  box-shadow: 0 0 20px 0 #ffffff4d;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  margin: 2em 0 0 0;
+}
+
+.contact-wrapper > * {
+  padding: 2em;
+}
+
+.contact-form {
+  background-color: #222222;
+}
+
+.contact-form form {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.contact-form form p {
+  margin: 0;
+  padding: 1em;
+}
+
+.contact-form form .block {
+  grid-column: 1/3;
+}
+
+.contact-form form button,
+.contact-form form input,
+.contact-form form textarea {
+  width: 100%;
+  padding: 0.7em;
+  border: none;
+  background: none;
+  outline: 0;
+  color: white;
+  border-bottom: 1px solid #095375;
+}
+
+.contact-form form button {
+  background: #095375;
+  border: 0;
+  text-transform: uppercase;
+  padding: 1em;
+}
+
+.contact-form form button:hover {
+  background: #063a52;
+  color: #c7c7c7;
+}
+
+.contact-info h4,
+.contact-info ul,
+.contact-info p {
+  text-align: left;
+  margin: 0 0 1rem 0;
+  padding: 1em;
+}
+
+.contact-info ul {
+  list-style: none;
+}
+
+.contact-info ul li {
+  padding: 0.3em;
+  margin-top: 0.3em;
+}
